Fixed text alignment error with button selection.

--- a/src/main/resources/fxml/style.css
+++ b/src/main/resources/fxml/style.css
@@ -25,7 +25,7 @@
     -fx-text-fill: white;
     -fx-font-weight: bold;
     -fx-font-size: 15;
-    -fx-alignment: center-left;
+    -fx-alignment: center;
 }
 
 .menuButtonColor{
